<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Package Params-->
    <string name="baseCityFrom_title">Откуда</string>
    <string name="baseCity_from">Нижний Новгород</string>

    <string name="baseCityWhere_title">Куда</string>
    <string name="baseCity_where">Москва</string>

    <string name="lengthTitle">Длинна, см</string>
    <string name="lengthValue">105</string>

    <string name="weightTitle">Ширина, см</string>
    <string name="weightValue">20</string>

    <string name="heightTitle">Высота, см</string>
    <string name="heightValue">30</string>

    <string name="continueButton">Рассчитать</string>

</resources>