<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.PackageParamsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/base_h_margin"
        android:layout_marginVertical="@dimen/base_v_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/cityFromTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baseCityFrom_title"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cityFrom"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/inputParamTopMargin"
            android:autofillHints=""
            android:background="@drawable/edit_text_border_orange"
            android:hint="@string/baseCity_from"
            android:inputType="text"
            android:paddingHorizontal="@dimen/editText_h"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityFromTitle" />

        <TextView
            android:id="@+id/cityWhereTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paramTopMargin"
            android:text="@string/baseCityWhere_title"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityFrom" />

        <EditText
            android:id="@+id/cityWhere"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/inputParamTopMargin"
            android:autofillHints=""
            android:background="@drawable/edit_text_border_orange"
            android:hint="@string/baseCity_where"
            android:inputType="text"
            android:paddingHorizontal="@dimen/editText_h"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityWhereTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/paramTopMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityWhere">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/lengthTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lengthTitle"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/lengthValue"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_border_orange"
                    android:gravity="center"
                    android:hint="@string/lengthValue"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/inputParamTopMargin"
                    android:paddingHorizontal="@dimen/packageParamsPadding"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lengthTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/packageParamsMargin"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/weightTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weightTitle"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/widthValue"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:layout_marginTop="@dimen/inputParamTopMargin"
                    android:background="@drawable/edit_text_border_orange"
                    android:gravity="center"
                    android:hint="@string/weightValue"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/packageParamsPadding"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weightTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/heightTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heightTitle"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/heightValue"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_border_orange"
                    android:gravity="center"
                    android:hint="@string/heightValue"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/inputParamTopMargin"
                    android:paddingHorizontal="@dimen/packageParamsPadding"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heightTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/continueButton"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/cornerRadius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>